--- a/V2/.vscode/settings.json
+++ b/V2/.vscode/settings.json
@@ -1,14 +1,18 @@
 {
     "files.associations": {
-        "istream": "cpp",
+        "mutex": "cpp",
+        "chrono": "cpp",
+        "thread": "cpp",
         "string": "cpp",
+        "xstring": "cpp",
         "iostream": "cpp",
-        "xtree": "cpp",
-        "xutility": "cpp",
+        "memory": "cpp",
         "algorithm": "cpp",
         "array": "cpp",
+        "atomic": "cpp",
         "cctype": "cpp",
         "cmath": "cpp",
+        "condition_variable": "cpp",
         "cstddef": "cpp",
         "cstdint": "cpp",
         "cstdio": "cpp",
@@ -16,22 +20,26 @@
         "cstring": "cpp",
         "ctime": "cpp",
         "cwchar": "cpp",
+        "deque": "cpp",
         "exception": "cpp",
         "forward_list": "cpp",
         "fstream": "cpp",
         "functional": "cpp",
+        "future": "cpp",
         "initializer_list": "cpp",
         "iomanip": "cpp",
         "ios": "cpp",
         "iosfwd": "cpp",
+        "istream": "cpp",
         "iterator": "cpp",
         "limits": "cpp",
         "locale": "cpp",
         "map": "cpp",
-        "memory": "cpp",
         "new": "cpp",
         "numeric": "cpp",
         "ostream": "cpp",
+        "queue": "cpp",
+        "ratio": "cpp",
         "sstream": "cpp",
         "stdexcept": "cpp",
         "streambuf": "cpp",
@@ -54,7 +62,8 @@
         "xmemory": "cpp",
         "xmemory0": "cpp",
         "xstddef": "cpp",
-        "xstring": "cpp",
-        "xtr1common": "cpp"
+        "xtr1common": "cpp",
+        "xtree": "cpp",
+        "xutility": "cpp"
     }
 }
