--- a/subjob/makefile
+++ b/subjob/makefile
@@ -4,7 +4,7 @@ LIB = -lpthread
 
 all: subjob clean
 
-subjob: job.o main.o c_socket.o subjob_service.o
+subjob: job.o main.o c_socket.o
 	${CC} *.o ${LIB} -I ${INCLUDE} -o $@
 %.o: %.cpp
 	${CC} $^ ${LIB} -I ${INCLUDE} -c
