--- a/V2/sender/makefile
+++ b/V2/sender/makefile
@@ -1,10 +1,9 @@
 CC = g++
 INCLUDE = ../lib
-LIB = -lpthread
 
-all: server clean
+all: sender clean
 
-server: Server.o Monitor.o main.o s_socket.o HandlerFactory.o c_socket.o Message.o Handler.o
+sender: c_socket.o Message.o main.o
 	${CC} *.o ${LIB} -I ${INCLUDE} -o $@
 %.o: %.cpp
 	${CC} $^ ${LIB} -I ${INCLUDE} -c
