--- a/V2/scheduler/makefile
+++ b/V2/scheduler/makefile
@@ -2,9 +2,9 @@ CC = g++
 INCLUDE = ../lib
 LIB = -lpthread
 
-all: server clean
+all: scheduler clean
 
-server: Server.o Monitor.o main.o s_socket.o HandlerFactory.o c_socket.o Message.o Handler.o Node.o
+scheduler: Message.o main.o cc_socket.o s_socket.o scheduler_service.o ScheHandler.o ScheHandlerFactory.o 
 	${CC} *.o ${LIB} -I ${INCLUDE} -o $@
 %.o: %.cpp
 	${CC} $^ ${LIB} -I ${INCLUDE} -c
