--- a/V2/sender/makefile
+++ b/V2/sender/makefile
@@ -3,7 +3,7 @@ INCLUDE = ../lib
 
 all: sender clean
 
-sender: c_socket.o Message.o main.o
+sender: cc_socket.o Message.o main.o
 	${CC} *.o ${LIB} -I ${INCLUDE} -o $@
 %.o: %.cpp
 	${CC} $^ ${LIB} -I ${INCLUDE} -c
