--- a/V2/mom/makefile
+++ b/V2/mom/makefile
@@ -4,7 +4,7 @@ LIB = -lpthread
 
 all: mom clean
 
-mom: Mom.o main.o s_socket.o MomHandlerFactory.o c_socket.o Message.o MomHandler.o
+mom: Mom.o main.o ../lib/s_socket.o MomHandlerFactory.o ../lib/c_socket.o ../lib/Message.o MomHandler.o
 	${CC} *.o ${LIB} -I ${INCLUDE} -o $@
 %.o: %.cpp
 	${CC} $^ ${LIB} -I ${INCLUDE} -c
