--- a/V2/scheduler/makefile
+++ b/V2/scheduler/makefile
@@ -4,7 +4,7 @@ LIB = -lpthread
 
 all: scheduler clean
 
-scheduler: Message.o main.o cc_socket.o s_socket.o scheduler_service.o ScheHandler.o ScheHandlerFactory.o 
+scheduler: ../lib/Message.o main.o ../lib/cc_socket.o ../lib/s_socket.o scheduler_service.o ScheHandler.o ScheHandlerFactory.o 
 	${CC} *.o ${LIB} -I ${INCLUDE} -o $@
 %.o: %.cpp
 	${CC} $^ ${LIB} -I ${INCLUDE} -c
