--- a/V2/server/makefile
+++ b/V2/server/makefile
@@ -4,7 +4,7 @@ LIB = -lpthread
 
 all: server clean
 
-server: Server.o Monitor.o main.o s_socket.o HandlerFactory.o c_socket.o Message.o Handler.o Node.o
+server: Server.o Monitor.o main.o ../lib/s_socket.o HandlerFactory.o ../lib/c_socket.o ../lib/Message.o Handler.o Node.o
 	${CC} *.o ${LIB} -I ${INCLUDE} -o $@
 %.o: %.cpp
 	${CC} $^ ${LIB} -I ${INCLUDE} -c
