--- a/mom/makefile
+++ b/mom/makefile
@@ -1,13 +1,12 @@
 CC = g++
+INCLUDE = ../lib
 LIB = -lpthread
 
 all: mom clean
 
-mom: mom_daemon.o
-	${CC} *.o ${LIB} -o $@
+mom: Mom.o main.o ../lib/s_socket.o MomHandlerFactory.o ../lib/c_socket.o ../lib/Message.o MomHandler.o
+	${CC} *.o ${LIB} -I ${INCLUDE} -o $@
 %.o: %.cpp
-	${CC} $^ ${LIB} -c
-
-
+	${CC} $^ ${LIB} -I ${INCLUDE} -c
 clean:
 	rm -f *.o
