--- a/server/makefile
+++ b/server/makefile
@@ -1,13 +1,12 @@
 CC = g++
+INCLUDE = ../lib
 LIB = -lpthread
 
 all: server clean
 
-server: server_socket_daemon.o job_info.o
-	${CC} *.o ${LIB} -o $@
+server: Server.o Monitor.o main.o ../lib/s_socket.o HandlerFactory.o ../lib/c_socket.o ../lib/Message.o Handler.o Node.o
+	${CC} *.o ${LIB} -I ${INCLUDE} -o $@
 %.o: %.cpp
-	${CC} $^ ${LIB} -c
-
-
+	${CC} $^ ${LIB} -I ${INCLUDE} -c
 clean:
 	rm -f *.o
