--- a/scheduler/makefile
+++ b/scheduler/makefile
@@ -1,13 +1,12 @@
 CC = g++
+INCLUDE = ../lib
 LIB = -lpthread
 
 all: scheduler clean
 
-scheduler: scheduler_socket_daemon.o
-	${CC} *.o ${LIB} -o $@
+scheduler: ../lib/Message.o main.o ../lib/cc_socket.o ../lib/s_socket.o scheduler_service.o ScheHandler.o ScheHandlerFactory.o 
+	${CC} *.o ${LIB} -I ${INCLUDE} -o $@
 %.o: %.cpp
-	${CC} $^ ${LIB} -c
-
-
+	${CC} $^ ${LIB} -I ${INCLUDE} -c
 clean:
 	rm -f *.o
