--- a/server/makefile
+++ b/server/makefile
@@ -1,12 +1,24 @@
-CC = g++
-INCLUDE = ../lib
-LIB = -lpthread
+CC := g++ -std=c++11
+CPPFLAGS := -Wall -O2
+INCLUDE := ../lib
+LIB := -lpthread
+SRCS := $(shell ls *.cpp)
+MODEL := ../lib/s_socket.o ../lib/c_socket.o ../lib/Message.o
+OBJS:=$(subst .cpp,.o,$(SRCS))
+RM:=rm -f
 
 all: server clean
 
-server: Server.o Monitor.o main.o ../lib/s_socket.o HandlerFactory.o ../lib/c_socket.o ../lib/Message.o Handler.o Node.o
-	${CC} *.o ${LIB} -I ${INCLUDE} -o $@
+server: $(OBJS) $(MODEL)
+	@echo "------ Linking ------" && \
+	$(CC) $(CPPFLAGS) $(LIB) -I ${INCLUDE} $^ -o $@ && \
+	echo  "------ Success ------" || echo "------ Fail! ------"
+
 %.o: %.cpp
-	${CC} $^ ${LIB} -I ${INCLUDE} -c
+	@echo "------ Compile >> " $^ "to" $@ && \
+	$(CC) $(CPPFLAGS) ${LIB} -I ${INCLUDE} -c $^ -o $@ && \
+	echo  "------ Success ------" || echo "------ Fail! ------"
+
 clean:
-	rm -f *.o
+	@$(RM) $(OBJS) && \
+	echo "------ Clear ------"
