--- a/scheduler/makefile
+++ b/scheduler/makefile
@@ -3,7 +3,7 @@ CPPFLAGS := -Wall -O2
 INCLUDE := ../lib
 LIB := -pthread
 SRCS := $(shell ls *.cpp)
-MODEL := ../lib/Message.o ../lib/cc_socket.o ../lib/s_socket.o
+MODEL := ../lib/Message.o ../lib/cc_socket.o ../lib/s_socket.o ../lib/s_nbsocket.o
 OBJS:=$(subst .cpp,.o,$(SRCS))
 RM:=rm -f
 
